--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,20 +1,31 @@
 name: Build
+
 on:
   push:
     branches:
       - main
   pull_request:
     types: [opened, synchronize, reopened]
+
 jobs:
   sonarcloud:
-    name: SonarCloud
+    name: SonarCloud Analysis
     runs-on: ubuntu-latest
+    timeout-minutes: 20  
+
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+          fetch-depth: 0  
+
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      - name: Print Current Date and Time
+        run: echo "Current Date and Time: $(date)"
+
+      - name: Display Repository Information
+        run: echo "Repository Owner: ${{ github.repository_owner }}, Repository Name: ${{ github.event.repository.name }}"
